Updated manuscript and analysis to inlcude zooms to latin america and south pacific islands as supplements

--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -2652,7 +2652,7 @@ World_map_part <- World_map_nemer %>%
     sf::st_transform(crs = "+proj=eck4") 
 
   
-lat_ammap <- ggplot(toe_map_data) +
+lat_am_map <- ggplot(toe_map_data) +
     geom_sf(
       aes(
         fill = reverse #original map
@@ -2693,13 +2693,10 @@ lat_ammap <- ggplot(toe_map_data) +
     ) +
     my_ggtheme_m(map_type = "regional",leg_pos = "")
 
-
-  
 ggsave("lat_am_map.png",
-       lat_ammap,
-       height = 5,
-       width = 6)
-
+       lat_am_map,
+       width = 8,
+       height = 6)
 
 ```
 
@@ -2709,74 +2706,81 @@ ggsave("lat_am_map.png",
 ```{r}
 
 
-  # Value Map
-  spi_map_part <- World_map_nemer %>% 
-    filter(
-      # tresh ==  tresh_list[i],
-      variable == "value"
-    ) %>% 
+# Value Map
+spi_map_part <- World_map_nemer %>% 
+  filter(
+    # tresh ==  tresh_list[i],
+    variable == "value"
+  ) %>% 
   sf::st_transform(crs = 3832) 
 
 
-  # ToE Map 
-  spi_toe_map_data <- World_eez_sf %>% 
-    left_join(Eez_d_hist,
-              by = "eezid") %>% 
-    filter(#tresh == tresh_list[i],
-           metric == "mean_yr")%>% 
-    sf::st_transform(crs = 3832) 
-  
-  # Map with countries without ToE
-  spi_no_toe_eez <- World_eez_sf %>% 
-    filter(eez_name %in% Neighbours$eez_name, # Filter EEZs without Transboundary spp
-           !eez_name %in% toe_map_data$eez_name) %>%  # Filter EEZs with ToE stocks
-    sf::st_transform(crs = 3832) 
-  
-  spi_no_toe_land <- World_map %>% 
-    filter(name %in% Neighbours$eez_name, # Filter EEZs without Transboundary spp
-           !name %in% World_map_part$name)%>% 
-    sf::st_transform(crs = 3832) # Filter EEZs with ToE stocks
-  
+# ToE Map 
+spi_toe_map_data <- World_eez_sf %>% 
+  left_join(Eez_d_hist,
+            by = "eezid") %>% 
+  filter(#tresh == tresh_list[i],
+    metric == "mean_yr")%>% 
+  sf::st_transform(crs = 3832) 
+
+# Map with countries without ToE
+spi_no_toe_eez <- World_eez_sf %>% 
+  filter(eez_name %in% Neighbours$eez_name, # Filter EEZs without Transboundary spp
+         !eez_name %in% toe_map_data$eez_name) %>%  # Filter EEZs with ToE stocks
+  sf::st_transform(crs = 3832) 
+
+spi_no_toe_land <- World_map %>% 
+  filter(name %in% Neighbours$eez_name, # Filter EEZs without Transboundary spp
+         !name %in% World_map_part$name)%>% 
+  sf::st_transform(crs = 3832) # Filter EEZs with ToE stocks
 
 
-  sp_map <-  ggplot(spi_toe_map_data) +
-    geom_sf(
-      aes(
-        fill = reverse #original map
-        # fill = value
-      ),
-      color =  "white",
-      size = 0.1
-    ) +
-    # Inlcude the participation of species
-    geom_sf(data = spi_map_part,
-            # aes(fill = participation+2000), #original map
-            aes(fill = participation, 
-                color = participation),
-            # color =  "white",
-            size = 0.1
-    ) +
-    # grey maps
-    geom_sf(data = spi_no_toe_eez, aes(), fill = "lightblue", color =  "white",size = 0.1) +
-    geom_sf(data = spi_no_toe_land, aes(), fill = "lightblue", color =  "white",size = 0.1) +
-    coord_sf(xlim = c(9500000,1000000),ylim = c(-3500000, 1900000)) + 
-    facet_wrap(~tresh) +
-    scale_colour_viridis("",
-                         limits = c(2000,2100),
-                         breaks = seq(2000,2100,25),
-                         # labels = c("","","","",""),
-                         direction = 1
-    ) +
-    scale_fill_viridis("",
-                         limits = c(2000,2100),
-                         breaks = seq(2000,2100,25),
-                         # labels = c("","","","",""),
-                         direction = 1
-    ) +
-    my_ggtheme_m(map_type = "regional",leg_pos = "bottom") +
-    theme(legend.key.width = unit(3, "line"))
-  
 
+spi_map <-  ggplot(spi_toe_map_data) +
+  geom_sf(
+    aes(
+      fill = reverse #original map
+      # fill = value
+    ),
+    color =  "white",
+    size = 0.1
+  ) +
+  # Inlcude the participation of species
+  geom_sf(data = spi_map_part,
+          # aes(fill = participation+2000), #original map
+          aes(fill = participation, 
+              color = participation),
+          # color =  "white",
+          size = 0.1
+  ) +
+  # grey maps
+  geom_sf(data = spi_no_toe_eez, aes(), fill = "lightblue", color =  "white",size = 0.1) +
+  geom_sf(data = spi_no_toe_land, aes(), fill = "lightblue", color =  "white",size = 0.1) +
+  coord_sf(xlim = c(9500000,1000000),ylim = c(-3500000, 1900000)) + 
+  facet_wrap(~tresh) +
+  scale_colour_viridis("",
+                       limits = c(2000,2100),
+                       breaks = seq(2000,2100,25),
+                       # labels = c("","","","",""),
+                       direction = 1
+  ) +
+  scale_fill_viridis("",
+                     limits = c(2000,2100),
+                     breaks = seq(2000,2100,25),
+                     # labels = c("","","","",""),
+                     direction = 1
+  ) +
+  scale_x_continuous(limits = c(-120,180),
+                     breaks = c(-120,180)
+                     # labels =c("a","b")
+                     ) + 
+  my_ggtheme_m(map_type = "regional",leg_pos = "bottom") +
+  theme(legend.key.width = unit(3, "line"))
+
+ggsave("spi_map.png",
+       spi_map,
+       width = 8,
+       height = 6)
 ```
 
 
