--- a/References/ToE_Ref.bib
+++ b/References/ToE_Ref.bib
@@ -1554,5 +1554,22 @@ address = {New Jersey, USA}
 
 
 
+@article{trisos_projected_2020,
+	title = {The projected timing of abrupt ecological disruption from climate change},
+	volume = {580},
+	issn = {0028-0836, 1476-4687},
+	url = {https://www.nature.com/articles/s41586-020-2189-9},
+	doi = {10.1038/s41586-020-2189-9},
+	language = {en},
+	number = {7804},
+	urldate = {2021-11-29},
+	journal = {Nature},
+	author = {Trisos, Christopher H. and Merow, Cory and Pigot, Alex L.},
+	month = apr,
+	year = {2020},
+	pages = {496--501},
+	file = {Submitted Version:/Users/jepa/Zotero/storage/ASXQVZ8R/Trisos et al. - 2020 - The projected timing of abrupt ecological disrupti.pdf:application/pdf},
+}
+
 
 
